# Projekt-1-Robotstyret-System-til-Objektidentifikation-Opsamling-og-Placering

./: README.md
beerPongBot-final-throw/: CMakeLists.txt  ballVar.yaml  calibration.yaml  cupVar.yaml  main.cpp  table_calibration_points.txt
beerPongBot-final-throw/includes/: CalcVelocity.cpp  CalcVelocity.h  RobotThrow.cpp  RobotThrow.h  angle.cpp  angle.h  calibrationPhotos.cpp  calibrationPhotos.h  cameraCalibration.cpp  cameraCalibration.h  cornerPoints.cpp  cornerPoints.h  createFile.cpp  createFile.h  data.cpp  data.h  drawCoordinates.cpp  drawCoordinates.h  gripper.cpp  gripper.h  homograf.cpp  homograf.h  jointVelocity.cpp  jointVelocity.h  objectDetection.cpp  objectDetection.h  readVar.cpp  readVar.h  robot.cpp  robot.h  robotCalibration.cpp  throwVector.cpp  throwVector.h  undistortion.cpp  undistortion.h
